# AI-data-science-team

./: .env.example  .env.sample  .gitignore  README.md  docker-compose.yml  krx_samsung_20250101_20260321.csv  krx_test_data.csv  krx_test_data.json  pyproject.toml  test.py
docs/: README.md
docs/00_MSA_아키텍처/: README.md
docs/01_시스템_아키텍처/: architecture.md
docs/02_데이터_수집팀/: data_collection_team.md
docs/03_분석팀/: analysis_team.md
docs/04-1_보고서팀/: report_team.md
docs/04_전망팀/: forecast_team.md
docs/05_텔레그램_연동/: telegram_integration.md
docs/06_웹_시각화/: web_visualization.md
docs/06_웹_시각화/ver2/: phase2_plan.md  web_visualization_v2.md
docs/07_보안_인증/: security_auth.md
docs/08_LLM_연동/: llm_integration.md
docs/09_배포_운영/: deployment.md
docs/PRD/: PRD.md
docs/crypto/: MCP_SETUP.md  README.md  SENTIMENT_SPEC.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/canvas/: OfficeCanvas.tsx  colorUtils.ts  drawBackground.ts  drawCharacters.ts  drawFurniture.ts  drawLabels.ts
frontend/src/config/: layout.ts
frontend/src/hooks/: useHyperliquidWS.ts
frontend/src/types/: crypto.ts
scripts/: test_hl_ws.py
src/: MSA_STRUCTURE.md  README.md  STRUCTURE.md  __init__.py
src/api-gateway/app/: main.py
src/collection-service/: requirements.txt
src/collection-service/app/: prefect_main.py
src/hyperliquid-service/: .dockerignore  Dockerfile  requirements.txt
src/hyperliquid-service/app/: __init__.py  collector.py  config.py  (+6 more)
src/web-service/: index.html  package-lock.json  package.json  vite.config.ts
(+61 files in other folders)
